mdt_cli/tests/snapshots/snapshots__pad_blocks_multi_lang_update_main_go.snap
---
source: mdt_cli/tests/snapshots.rs
expression: main_go
---
package main

// <!-- {=api_docs|trim|linePrefix:"// ":true} -->
// 
// my-tool v2.0.0
// 
// A multi-language tool.
// 
// ## Getting Started
// 
// Use the default configuration to get started quickly.
// 
// <!-- {/api_docs} -->
func Configure() {}
