mdt_cli/tests/snapshots/snapshots__pad_blocks_rust_check_stale_diff.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpuGywHG
    - check
    - "--diff"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 3

Stale consumers:
  block `crate_docs` at lib.rs:1:5
   
  -//! Old crate docs here.
  +//!
  +//! # My Crate
  +//!
  +//! A powerful library for doing things.
  +//!
  +//! ## Features
  +//!
  +//! - Fast and efficient
  +//! - Easy to use
  +//!
   //! 
  block `fn_greet` at lib.rs:5:5
   
  -/// Old function docs.
  +///
  +/// Greets the user by name.
  +///
  +/// ## Examples
  +///
  +/// ```rust
  +/// greet("Alice");
  +/// ```
  +///
   /// 
  block `crate_docs` at readme.md:3:1
   
   
  -Old readme content.
   
  +# My Crate
  +
  +A powerful library for doing things.
  +
  +## Features
  +
  +- Fast and efficient
  +- Easy to use
  +
  +

3 consumer block(s) are out of date. Run `mdt update`.
