mdt_cli/tests/snapshots/snapshots__padding_inline_migration_check_stale.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpClkVkC
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 2

Stale consumers:
  block `crate_docs` at lib.rs:1:5
  block `fn_greet` at lib.rs:5:5

2 consumer block(s) are out of date. Run `mdt update`.
