mdt_cli/tests/snapshots/snapshots__padding_inline_migration_update.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpjk3POp
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Updated 2 block(s) in 1 file(s).

----- stderr -----
